# BPD

./: README.md
ble-profile-inspector/: AGENTS.md  README.md  pyproject.toml
ble-profile-inspector/examples/: expected_profile.example.json  latest_scan.example.json
ble-profile-inspector/flipper_app/: README.md  application.fam  ble_profile_inspector.c
ble-profile-inspector/src/ble_profile_inspector/: cli.py  compare.py  export.py  models.py  rules.py  scanner.py  utils.py
ble-profile-inspector/tests/: test_compare.py  test_export.py  test_rules.py
